--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run build:widgets && next build",
-    "build:widgets": "cd src/ui-widgets && yarn && yarn build && cp dist/ui.js ../../public/widgets/ui.js",
+    "build": "next build",
+    "build:widgets": "cd src/ui-widgets && yarn && yarn build",
     "start": "next start",
     "lint": "next lint"
   },
